--- a/app/src/main/res/layout/activity_search_book.xml
+++ b/app/src/main/res/layout/activity_search_book.xml
@@ -89,6 +89,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/def_margin"
+                    android:layout_marginBottom="64dp"
                     android:orientation="horizontal"/>
 
             </LinearLayout>
