--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,5 +24,6 @@
     <dimen name="spacing_xlarge">32dp</dimen>
     <dimen name="single_book_card_bottom_margin">2dp</dimen>
     <dimen name="gradient_cover_height">200dp</dimen>
+    <dimen name="edit_text_size">14sp</dimen>
 
 </resources>
