Add: new values

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,10 +36,9 @@
     </style>
 
     <style name="CardViewHeaderText">
-        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:fontFamily">sans-serif</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
-        <!--<item name="android:inputType">textCapWords</item>-->
     </style>
 
     <style name="CardViewContentText">
