--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="welcomeBackgroundLoginVia">#7578b2</color>
     <color name="colorPrimaryHalfTransparent">#70ffb033</color>
     <color name="buttonColorGreen">#65d527</color>
+    <color name="linkColor">#3097D1</color>
 </resources>
