Added new behavior which set gone to edit button

--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -241,6 +241,7 @@
                     <Button
                         android:id="@+id/btn_edit_book"
                         style="@style/LoadPdfButtonStyle"
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_mode_edit_white_24dp"
