Implemented show pending user address

--- a/app/src/main/res/layout/dialog_transfer_book.xml
+++ b/app/src/main/res/layout/dialog_transfer_book.xml
@@ -82,6 +82,7 @@
                 android:id="@+id/dialog_user_city"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/def_margin"
                 android:layout_marginStart="@dimen/def_margin"/>
 
         </LinearLayout>
@@ -95,6 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/def_margin"
+        android:layout_marginBottom="@dimen/def_margin"
         android:visibility="gone"
         app:SpinKit_Color="@color/colorAccent"/>
 
@@ -102,7 +104,6 @@
         android:id="@+id/btn_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/def_margin"
         android:text="@string/dialog_transfer_confirm"/>
 
 </LinearLayout>
