--- a/app/src/main/res/layout/demand_queue_row.xml
+++ b/app/src/main/res/layout/demand_queue_row.xml
@@ -96,7 +96,20 @@
                 android:layout_marginEnd="@dimen/def_margin"
                 android:layout_toEndOf="@id/iv_book_thumbnail"
                 android:text="@string/button_confirm_transfer"
+                android:visibility="gone"
                 android:theme="@style/Confirm.Button"/>
+
+            <Button
+                android:id="@+id/btn_show_address"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/iv_book_thumbnail"
+                android:layout_marginEnd="@dimen/def_margin"
+                android:layout_toEndOf="@id/iv_book_thumbnail"
+                android:text="@string/message_button_show_address"
+                android:visibility="gone"
+                android:theme="@style/ShowAddress.Button"/>
 
         </RelativeLayout>
 
