--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,10 @@
         <item name="colorAccent">@color/buttonColorGreen</item>
     </style>
 
+    <style name="ShowAddress.Button" parent="ThemeOverlay.AppCompat">
+        <item name="colorAccent">@color/buttonColorBlue</item>
+    </style>
+
     <style name="AppTheme.Toolbar" parent="@style/ThemeOverlay.AppCompat.Light">
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:textColorPrimary">@color/textColorPrimary</item>
