--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/welcome_parent_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,7 +10,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
     <ImageView
         android:id="@+id/iv_next"
@@ -16,10 +18,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_marginBottom="26dp"
         android:layout_marginRight="24dp"
         android:background="@drawable/circle_shape"
-        android:src="@drawable/ic_navigate_next_white_24dp" />
+        android:src="@drawable/ic_navigate_next_white_24dp"/>
 
     <com.merhold.extensiblepageindicator.ExtensiblePageIndicator
         android:id="@+id/flexibleIndicator"
@@ -28,6 +31,6 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="40dp"
         app:indicatorPadding="16dp"
-        app:indicatorRadius="6dp" />
+        app:indicatorRadius="6dp"/>
 
 </RelativeLayout>
