--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
     </style>
 
     <style name="ShowAddress.Button" parent="ThemeOverlay.AppCompat">
-        <item name="colorAccent">@color/buttonColorBlue</item>
+        <item name="colorAccent">@color/ColorBlue</item>
     </style>
 
     <style name="AppTheme.Toolbar" parent="@style/ThemeOverlay.AppCompat.Light">
@@ -95,6 +95,17 @@
         <item name="android:layout_marginRight">12dp</item>
         <item name="android:layout_marginTop">8dp</item>
         <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="DialogCardContentStyle">
+        <item name="android:layout_marginTop">@dimen/def_margin</item>
+        <item name="android:layout_marginStart">@dimen/def_margin</item>
+        <item name="android:layout_marginEnd">16dp</item>
+    </style>
+
+    <style name="DialogCardHeaderTextStyle">
+        <item name="android:layout_marginTop">@dimen/def_margin</item>
+        <item name="android:layout_marginStart">16dp</item>
     </style>
 
     <style name="MaterialSearchViewStyle">
