--- a/app/src/main/res/layout/single_book_vertical.xml
+++ b/app/src/main/res/layout/single_book_vertical.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view_added_book"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -19,8 +18,7 @@
             android:layout_width="200dp"
             android:layout_height="250dp"
             android:layout_centerHorizontal="true"
-            android:scaleType="fitXY"
-            app:srcCompat="@drawable/books"/>
+            android:scaleType="fitXY"/>
 
         <TextView
             android:id="@+id/tv_book_title"
@@ -31,8 +29,7 @@
             android:layout_below="@id/iv_book_cover"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Awantury na tle powszechnego ciążenia"/>
+            android:layout_marginTop="8dp"/>
 
         <TextView
             android:id="@+id/tv_book_author"
@@ -44,8 +41,7 @@
             android:layout_centerHorizontal="false"
             android:layout_centerInParent="false"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:text="~Tomasz Lem"/>
+            android:layout_marginRight="8dp"/>
 
     </RelativeLayout>
 
