--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,9 +4,8 @@
         <item>Dashboard</item>
         <item>Szukaj książki</item>
         <item>Panel książek</item>
-        <item>Lista życzeń</item>
+        <item>Wszystkie książki</item>
         <item>Losuj książkę</item>
-        <item>Moja historia</item>
         <item>FAQ</item>
         <item>Ranking i statystyki</item>
         <item>Ustawienia profilu</item>
@@ -18,7 +17,6 @@
         <item>@drawable/ic_book_white_36dp</item>
         <item>@drawable/ic_favorite_white_36dp</item>
         <item>@drawable/ic_casino_white_36dp</item>
-        <item>@drawable/ic_date_range_white_36dp</item>
         <item>@drawable/ic_explore_white_36dp</item>
         <item>@drawable/ic_equalizer_white_36dp</item>
         <item>@drawable/ic_account_circle_white_36dp</item>
