--- a/app/src/main/res/layout/activity_profile_settings.xml
+++ b/app/src/main/res/layout/activity_profile_settings.xml
@@ -143,7 +143,9 @@
                         android:layout_marginRight="@dimen/activity_vertical_margin"
                         android:drawablePadding="4dp"
                         android:drawableStart="@drawable/ic_done_white_24dp"
-                        android:text="@string/settings_btn_action_save"/>
+                        android:text="@string/settings_btn_action_save"
+                        android:textAllCaps="true"
+                        android:textColor="@android:color/white"/>
 
                     <View
                         android:layout_width="match_parent"
@@ -174,15 +176,17 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:text="@string/settings_option_notification_email"
                             android:textSize="16sp"/>
 
                         <Switch
                             android:id="@+id/switch_notification_email"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"/>
 
                     </LinearLayout>
 
@@ -198,15 +202,17 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:text="@string/settings_option_notification_pw_wykop"
                             android:textSize="16sp"/>
 
                         <Switch
                             android:id="@+id/switch_notification_pm"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"/>
 
                     </LinearLayout>
 
@@ -247,7 +253,8 @@
                         android:layout_marginTop="@dimen/def_margin"
                         android:drawablePadding="4dp"
                         android:drawableStart="@drawable/ic_exit_to_app_white_24dp"
-                        android:text="@string/settings_btn_action_logout"/>
+                        android:text="@string/settings_btn_action_logout"
+                        android:textColor="@android:color/white"/>
 
                 </LinearLayout>
 
