--- a/app/src/main/res/layout/base_upload_book.xml
+++ b/app/src/main/res/layout/base_upload_book.xml
@@ -55,6 +55,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignEnd="@id/iv_book_cover"
+                            android:textColor="@android:color/white"
                             android:layout_alignStart="@id/iv_book_cover"
                             android:layout_below="@id/iv_book_cover"
                             android:text="@string/btn_message_take_photo"/>
@@ -264,6 +265,7 @@
                     android:id="@+id/btn_commit_book"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/white"
                     android:layout_below="@id/cv_book_seek_bars"
                     android:layout_marginTop="@dimen/def_margin"/>
 
