--- a/app/src/main/res/layout/error_layout.xml
+++ b/app/src/main/res/layout/error_layout.xml
@@ -22,6 +22,7 @@
         android:id="@+id/btn_error_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btn_action_retry"/>
+        android:text="@string/btn_action_retry"
+        android:textColor="@android:color/white"/>
 
 </LinearLayout>
