--- a/app/src/main/res/layout/fragment_welcome_about.xml
+++ b/app/src/main/res/layout/fragment_welcome_about.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/welcomeBackgroundAbout"
-              android:gravity="center_vertical|center_horizontal"
-              android:orientation="vertical">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/welcomeBackgroundAbout"
+    android:gravity="center_vertical|center_horizontal"
+    android:orientation="vertical">
 
     <TextView
         style="@style/welcomePagerHeaderStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/welcome_about_header" />
+        android:text="@string/welcome_about_header"/>
 
     <TextView
         style="@style/welcomePagerContentStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/welcome_about_header2" />
+        android:text="@string/welcome_about_header2"/>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -26,13 +27,13 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="40dp"
         android:layout_marginTop="40dp"
-        android:src="@drawable/kv_img" />
+        android:src="@drawable/kv_img"/>
 
     <TextView
         style="@style/welcomePagerContentStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/welcome_about_content_text" />
+        android:text="@string/welcome_about_content_text"/>
 
 </LinearLayout>
