--- a/app/src/main/res/layout/fragment_welcome_how_it_works.xml
+++ b/app/src/main/res/layout/fragment_welcome_how_it_works.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/welcomeBackgroundHow"
-              android:gravity="center_vertical|center_horizontal"
-              android:orientation="vertical">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/welcomeBackgroundHow"
+    android:gravity="center_vertical|center_horizontal"
+    android:orientation="vertical">
 
     <TextView
         style="@style/welcomePagerHeaderStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/welcome_how_header" />
+        android:text="@string/welcome_how_header"/>
 
     <ImageView
+        android:layout_width="150dp"
         android:layout_height="120dp"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/section_2"
-        android:layout_width="150dp" />
+        android:src="@drawable/section_2"/>
 
     <TextView
         style="@style/welcomePagerContentStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/welcome_how_content" />
+        android:text="@string/welcome_how_content"/>
 
     <Button
         android:id="@+id/btn_open_faq"
@@ -34,6 +35,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginTop="16dp"
-        android:text="@string/welcome_how_button_text" />
+        android:text="@string/welcome_how_button_text"
+        android:textColor="@android:color/white"/>
 
 </LinearLayout>
