--- a/app/src/main/res/drawable/ic_add_book.xml
+++ b/app/src/main/res/drawable/ic_add_book.xml
@@ -1,9 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
+        android:width="36dp"
+        android:height="36dp"
+        android:viewportHeight="36"
+        android:viewportWidth="36">
+
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M14,2L6,2c-1.1,0 -1.99,0.9 -1.99,2L4,20c0,1.1 0.89,2 1.99,2L18,22c1.1,0 2,-0.9 2,-2L20,8l-6,-6zM16,16h-3v3h-2v-3L8,16v-2h3v-3h2v3h3v2zM13,9L13,3.5L18.5,9L13,9z"/>
+        android:pathData="M0,0h36v36H0V0z"/>
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M26.932,3h-18c-1.65,0-3,1.35-3,3v24c0,1.65,1.35,3,3,3h18c1.65,0,3-1.35,3-3V6
+        C29.932,4.35,28.582,3,26.932,3z M8.932,6h7.5v12l-3.75-2.25L8.932,18V6z
+        M13.936,23.699h2.805V20.88h2.365v2.819h2.82v2.366h-2.82
+        v2.806h-2.365v-2.806h-2.805V23.699z"/>
 </vector>
