--- a/app/src/main/res/layout/book_row.xml
+++ b/app/src/main/res/layout/book_row.xml
@@ -31,7 +31,9 @@
                     android:id="@+id/iv_book_thumbnail"
                     android:layout_width="@dimen/book_thumbnail_width"
                     android:layout_height="@dimen/book_thumbnail_height"
-                    android:layout_margin="@dimen/def_margin"
+                    android:layout_marginStart="@dimen/def_margin"
+                    android:layout_marginEnd="@dimen/def_margin"
+                    android:layout_marginTop="@dimen/def_margin"
                     android:paddingBottom="@dimen/def_margin"
                     android:scaleType="fitXY"
                     android:transitionName="@string/transition_book_cover" />
