--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -76,6 +76,7 @@
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         android:background="@color/cardViewBackground"
         android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
