--- a/app/src/main/res/layout/activity_random_book.xml
+++ b/app/src/main/res/layout/activity_random_book.xml
@@ -68,8 +68,7 @@
                         android:layout_height="250dp"
                         android:layout_centerHorizontal="true"
                         android:scaleType="fitXY"
-                        android:transitionName="@string/transition_book_cover"
-                        app:srcCompat="@drawable/books"/>
+                        android:transitionName="@string/transition_book_cover"/>
 
                     <TextView
                         android:id="@+id/tv_book_title"
